--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ iframe {
 	display: inline-block;
 	margin: 0 20px;
 }
-#contact .social i.fa {
+#contact .social i {
 	font-size: 24px;
 	padding-top: 8px;
 	color: #292929;
