--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ hr {
 	PORTFOLIO
 ------------------------------------------------------*/
 #works {
-	padding: 120px 0;
+	padding: 120px 0 0;
 	background: #f2f2f2;
 }
 .categories {
